@@ -153,7 +153,7 @@ MaxWaitIndirect=15
 DisplaysPerHost=2
 # The number of seconds after which a non-responsive session is logged off.
 # Better keep this low.
-PingInterval=5
+PingInterval=15
 # The port.  177 is the standard port so better keep it that way
 Port=177
 # Willing script, none is shipped and by default we'll send
