@@ -43,12 +43,14 @@ gchar *s = N_("Standard greeter");
 gchar *s = N_("<b>Preview:</b>");
 gchar *s = N_("No screenshot available");
 gchar *s = N_("<b>Description:</b>");
+gchar *s = N_("<b>Copyright:</b>");
 gchar *s = N_("<b>Author:</b>");
 gchar *s = N_("description\n"
               "widget");
 gchar *s = N_("author");
 gchar *s = N_("copyright");
 gchar *s = N_("_Install new theme");
+gchar *s = N_("_Delete theme");
 gchar *s = N_("Graphical greeter");
 gchar *s = N_("Allow _root to login with GDM");
 gchar *s = N_("Allow root to login r_emotely with GDM");
@@ -67,6 +69,7 @@ gchar *s = N_("Maximum remote sessions:");
 gchar *s = N_("Maximum wait time:");
 gchar *s = N_("Maximum indirect wait time:");
 gchar *s = N_("Displays per host:");
-gchar *s = N_("Ping interval (minutes):");
+gchar *s = N_("Ping interval (seconds):");
+gchar *s = N_("Ping interval (seconds):");
 gchar *s = N_("Enable _XDMCP");
 gchar *s = N_("XDMCP");
